Snapshot test for long text

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Earthquakes.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 Earthquakes.xcodeproj/xcuserdata/shrawanzadoo.xcuserdatad/xcschemes/xcschememanagement.plist
 contents.xcworkspacedata
 IDEWorkspaceChecks.plist
+IDEFindNavigatorScopes.plist
